--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -9,14 +9,39 @@
 
 	<form th:action="@{/app/subir}" th:object="${usuario}" method="POST">
 
+
+		<div>
+			<label for="pais">País</label>
+			<div>
+				<select name="pais" id="pais" th:field="*{pais}">
+					<option value="">-- seleccionar --</option>
+					<option th:each="pais:${paises}" th:text="${pais.nombre}"
+						th:value="${pais.id}"></option>
+				</select>
+			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
+
+
+		<div>
+			<label for="roles">Roles</label>
+			<div th:each="role: ${roles}">
+				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" /> 
+				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
+			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
+
 		<div>
 			<label for="identificador">Identificador</label>
 			<div>
-				<input name="identificador" id="identificador" type="text" th:field="*{identificador}" />
+				<input name="identificador" id="identificador" type="text"
+					th:field="*{identificador}" />
 			</div>
 		</div>
-		<div th:if="${#fields.hasErrors('identificador')}" th:errors="*{identificador}"></div>
-		<div>
+		<div th:if="${#fields.hasErrors('identificador')}"
+			th:errors="*{identificador}"></div>
+
 
 			<div>
 				<label for="nombre">Nombre</label>
@@ -63,6 +88,24 @@
 				</div>
 			</div>
 			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+
+			<div>
+				<label for="edad">Edad</label>
+				<div>
+					<input name="edad" id="edad" type="number" th:field="*{edad}" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('edad')}" th:errors="*{edad}"></div>
+
+			<div>
+				<label for="fechaNacimiento">Fecha de nacimiento</label>
+				<div>
+					<input name="fechaNacimiento" id="fechaNacimiento" type="date"
+						th:field="*{fechaNacimiento}" placeholder="yyyy/MM/dd" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('fechaNacimiento')}"
+				th:errors="*{fechaNacimiento}"></div>
 
 			<button type="submit">Subir datos</button>
 	</form>
