--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -9,6 +9,13 @@
 
 	<form th:action="@{/app/subir}" th:object="${usuario}" method="POST">
 
+		<div>
+			<label for="habilitar">Habilitar</label>
+			<div>
+				<input name="habilitar" id="habilitar" type="checkbox"
+					th:field="*{habilitar}" />
+			</div>
+		</div>
 
 		<div>
 			<label for="pais">País</label>
@@ -26,7 +33,7 @@
 		<div>
 			<label for="roles">Roles</label>
 			<div th:each="role: ${roles}">
-				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" /> 
+				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" />
 				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
 			</div>
 		</div>
@@ -43,71 +50,70 @@
 			th:errors="*{identificador}"></div>
 
 
+		<div>
+			<label for="nombre">Nombre</label>
 			<div>
-				<label for="nombre">Nombre</label>
-				<div>
-					<input name="nombre" id="nombre" type="text" th:field="*{nombre}" />
-				</div>
+				<input name="nombre" id="nombre" type="text" th:field="*{nombre}" />
 			</div>
-			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
-			<div>
-
-
-				<div>
-					<label for="apellido">Apellido</label>
-					<div>
-						<input name="apellido" id="apellido" type="text"
-							th:field="*{apellido}" />
-					</div>
-				</div>
-				<div th:if="${#fields.hasErrors('apellido')}"
-					th:errors="*{apellido}"></div>
-			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
+		<div>
 
 
 			<div>
-				<label for="username">Username</label>
+				<label for="apellido">Apellido</label>
 				<div>
-					<input name="username" id="username" type="text"
-						th:field="*{username}" />
+					<input name="apellido" id="apellido" type="text"
+						th:field="*{apellido}" />
 				</div>
 			</div>
-			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-			<div>
-				<label for="password">Password</label>
-				<div>
-					<input name="password" id="password" type="password"
-						th:field="*{password}" />
-				</div>
-			</div>
-			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-			<div>
-				<label for="email">Email</label>
-				<div>
-					<input name="email" id="email" type="email" th:field="*{email}" />
-				</div>
-			</div>
-			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
+		</div>
 
-			<div>
-				<label for="edad">Edad</label>
-				<div>
-					<input name="edad" id="edad" type="number" th:field="*{edad}" />
-				</div>
-			</div>
-			<div th:if="${#fields.hasErrors('edad')}" th:errors="*{edad}"></div>
 
+		<div>
+			<label for="username">Username</label>
 			<div>
-				<label for="fechaNacimiento">Fecha de nacimiento</label>
-				<div>
-					<input name="fechaNacimiento" id="fechaNacimiento" type="date"
-						th:field="*{fechaNacimiento}" placeholder="yyyy/MM/dd" />
-				</div>
+				<input name="username" id="username" type="text"
+					th:field="*{username}" />
 			</div>
-			<div th:if="${#fields.hasErrors('fechaNacimiento')}"
-				th:errors="*{fechaNacimiento}"></div>
+		</div>
+		<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+		<div>
+			<label for="password">Password</label>
+			<div>
+				<input name="password" id="password" type="password"
+					th:field="*{password}" />
+			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
+		<div>
+			<label for="email">Email</label>
+			<div>
+				<input name="email" id="email" type="email" th:field="*{email}" />
+			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
 
-			<button type="submit">Subir datos</button>
+		<div>
+			<label for="edad">Edad</label>
+			<div>
+				<input name="edad" id="edad" type="number" th:field="*{edad}" />
+			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('edad')}" th:errors="*{edad}"></div>
+
+		<div>
+			<label for="fechaNacimiento">Fecha de nacimiento</label>
+			<div>
+				<input name="fechaNacimiento" id="fechaNacimiento" type="date"
+					th:field="*{fechaNacimiento}" placeholder="yyyy/MM/dd" />
+			</div>
+		</div>
+		<div th:if="${#fields.hasErrors('fechaNacimiento')}"
+			th:errors="*{fechaNacimiento}"></div>
+
+		<button type="submit">Subir datos</button>
 	</form>
 
 </body>
