--- a/src/main/resources/templates/resultado.html
+++ b/src/main/resources/templates/resultado.html
@@ -9,6 +9,7 @@
 
 	<ul>
 		<li>Habilitar: <span th:text="${usuario.habilitar}"></span></li>
+		<li>Género: <span th:text="${usuario.genero}"></span></li>
 		<li>Id de país: <span th:text="${usuario.pais.id}"></span></li>
 		<li>Código de País: <span th:text="${usuario.pais.codigo}"></span></li>
 		<li>Nombre de País: <span th:text="${usuario.pais.nombre}"></span></li>
