--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -44,7 +44,7 @@
 		<div>
 			<label for="roles">Roles</label>
 			<div th:each="role: ${roles}">
-				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" />
+				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" th:checked="${#lists.contains(usuario.roles, role)}"/>
 				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
 			</div>
 		</div>
