--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,129 +3,163 @@
 <head>
 <meta charset="UTF-8">
 <title th:text="${titulo}"></title>
+<link th:href="@{estilos.css}" rel="stylesheet" />
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+	crossorigin="anonymous">
+<link th:href="@{/css/estilos.css}" rel="stylesheet" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
+
 </head>
-<body>
-	<h1 th:text="${titulo}"></h1>
+<body id="form-body">
 
-	<form th:action="@{/app/subir}" th:object="${usuario}" method="POST">
+	<div class="container my-5" id="contenedor-form">
+		<center id="titulo-form">
+			<h1 th:text="${titulo}"></h1>
+		</center>
+		<form th:action="@{/app/subir}" th:object="${usuario}" method="POST">
 
-		<div>
-			<label for="habilitar">Habilitar</label>
-			<div>
-				<input name="habilitar" id="habilitar" type="checkbox"
-					th:field="*{habilitar}" />
-			</div>
-		</div>
-
-		<div>
-			<label>Género</label>
-			<div th:each="gen: ${genero}">
-				<input type="radio" th:value="${gen}" th:field="*{genero}" /> <label
-					th:for="${#ids.prev('genero')}" th:text="${gen}"></label>
-			</div>
-
-		</div>
-		<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"></div>
-
-
-		<div>
-			<label for="pais">País</label>
-			<div>
-				<select name="pais" id="pais" th:field="*{pais}">
-					<option value="">-- seleccionar --</option>
-					<option th:each="pais:${paises}" th:text="${pais.nombre}"
-						th:value="${pais.id}"></option>
-				</select>
-			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"></div>
-
-
-		<div>
-			<label for="roles">Roles</label>
-			<div th:each="role: ${roles}">
-				<input type="checkbox" th:field="*{roles}" th:value="${role.id}" th:checked="${#lists.contains(usuario.roles, role)}"/>
-				<label th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
-			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"></div>
-
-		<div>
-			<label for="identificador">Identificador</label>
-			<div>
-				<input name="identificador" id="identificador" type="text"
-					th:field="*{identificador}" />
-			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('identificador')}"
-			th:errors="*{identificador}"></div>
-
-
-		<div>
-			<label for="nombre">Nombre</label>
-			<div>
-				<input name="nombre" id="nombre" type="text" th:field="*{nombre}" />
-			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"></div>
-		<div>
-
-
-			<div>
-				<label for="apellido">Apellido</label>
-				<div>
-					<input name="apellido" id="apellido" type="text"
-						th:field="*{apellido}" />
+			<div class="form-group row my-3">
+				<label for="habilitar" class="col-form-label col-sm-2">Habilitar</label>
+				<div class="row col-sm-2">
+					<input name="habilitar" id="habilitar" type="checkbox"
+						th:field="*{habilitar}" class="col-sm-2" />
 				</div>
 			</div>
-			<div th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}"></div>
-		</div>
 
+			<div class="form-group row my-3">
+				<label class="col-form-label col-sm-2">Género</label>
+				<div th:each="gen: ${genero}" class="row col-sm-2">
+					<input type="radio" th:value="${gen}" th:field="*{genero}"
+						class="col-sm-2" /> <label class="col-form-label col-sm-2"
+						th:for="${#ids.prev('genero')}" th:text="${gen}"></label>
+				</div>
 
-		<div>
-			<label for="username">Username</label>
-			<div>
-				<input name="username" id="username" type="text"
-					th:field="*{username}" />
 			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
-		<div>
-			<label for="password">Password</label>
-			<div>
-				<input name="password" id="password" type="password"
-					th:field="*{password}" />
-			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
-		<div>
-			<label for="email">Email</label>
-			<div>
-				<input name="email" id="email" type="email" th:field="*{email}" />
-			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+			<div th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}"
+				class="alert alert-danger"></div>
 
-		<div>
-			<label for="edad">Edad</label>
-			<div>
-				<input name="edad" id="edad" type="number" th:field="*{edad}" />
+
+			<div class="form-group row my-3">
+				<label for="pais" class="col-form-label col-sm-2">País</label>
+				<div class="row col-sm-4">
+					<select name="pais" id="pais" th:field="*{pais}"
+						class="form-control">
+						<option value="">-- seleccionar --</option>
+						<option th:each="pais:${paises}" th:text="${pais.nombre}"
+							th:value="${pais.id}"></option>
+					</select>
+				</div>
 			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('edad')}" th:errors="*{edad}"></div>
+			<div th:if="${#fields.hasErrors('pais')}" th:errors="*{pais}"
+				class="alert alert-danger"></div>
 
-		<div>
-			<label for="fechaNacimiento">Fecha de nacimiento</label>
-			<div>
-				<input name="fechaNacimiento" id="fechaNacimiento" type="date"
-					th:field="*{fechaNacimiento}" placeholder="yyyy/MM/dd" />
+
+			<div class="form-group row my-3">
+				<label for="roles" class="col-form-label col-sm-2">Roles</label>
+				<div th:each="role: ${roles}" class="row col-sm-2">
+					<input type="checkbox" th:field="*{roles}" th:value="${role.id}"
+						th:checked="${#lists.contains(usuario.roles, role)}"
+						class="col-sm-2" /> <label th:for="${#ids.prev('roles')}"
+						th:text="${role.nombre}" class="col-form-label col-sm-2"></label>
+				</div>
 			</div>
-		</div>
-		<div th:if="${#fields.hasErrors('fechaNacimiento')}"
-			th:errors="*{fechaNacimiento}"></div>
+			<div th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}"
+				class="alert alert-danger"></div>
 
-		<button type="submit">Subir datos</button>
-	</form>
+			<div class="form-group row my-3">
+				<label for="identificador" class="col-form-label col-sm-2">Identificador</label>
+				<div class="row col-sm-4">
+					<input name="identificador" id="identificador" type="text"
+						th:field="*{identificador}" class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('identificador')}"
+				th:errors="*{identificador}" class="alert alert-danger"></div>
 
+
+			<div class="form-group row my-3">
+				<label for="nombre" class="col-form-label col-sm-2">Nombre</label>
+				<div class="row col-sm-4">
+					<input name="nombre" id="nombre" type="text" th:field="*{nombre}"
+						class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}"
+				class="alert alert-danger"></div>
+			<div>
+
+
+				<div class="form-group row my-3">
+					<label for="apellido" class="col-form-label col-sm-2">Apellido</label>
+					<div class="row col-sm-4">
+						<input name="apellido" id="apellido" type="text"
+							th:field="*{apellido}" class="form-control" />
+					</div>
+				</div>
+				<div th:if="${#fields.hasErrors('apellido')}"
+					th:errors="*{apellido}" class="alert alert-danger"></div>
+			</div>
+
+
+			<div class="form-group row my-3">
+				<label for="username" class="col-form-label col-sm-2">Username</label>
+				<div class="row col-sm-4">
+					<input name="username" id="username" type="text"
+						th:field="*{username}" class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('username')}" th:errors="*{username}"
+				class="alert alert-danger"></div>
+			<div class="form-group row">
+				<label for="password" class="col-form-label col-sm-2">Password</label>
+				<div class="row col-sm-4">
+					<input name="password" id="password" type="password"
+						th:field="*{password}" class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+				class="alert alert-danger"></div>
+
+			<div class="form-group row my-3">
+				<label for="email" class="col-form-label col-sm-2">Email</label>
+				<div class="row col-sm-4">
+					<input name="email" id="email" type="email" th:field="*{email}"
+						class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+				class="alert alert-danger"></div>
+
+			<div class="form-group row my-3">
+				<label for="edad" class="col-form-label col-sm-2">Edad</label>
+				<div class="row col-sm-4">
+					<input name="edad" id="edad" type="number" th:field="*{edad}"
+						class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('edad')}" th:errors="*{edad}"
+				class="alert alert-danger"></div>
+
+			<div class="form-group row my-3">
+				<label for="fechaNacimiento" class="col-form-label col-sm-2">Fecha
+					de nacimiento</label>
+				<div class="row col-sm-4">
+					<input name="fechaNacimiento" id="fechaNacimiento" type="date"
+						th:field="*{fechaNacimiento}" placeholder="yyyy/MM/dd"
+						class="form-control" />
+				</div>
+			</div>
+			<div th:if="${#fields.hasErrors('fechaNacimiento')}"
+				th:errors="*{fechaNacimiento}" class="alert alert-danger"></div>
+
+			<button id="btn-submit"
+				type="submit">Subir datos</button>
+		</form>
+	</div>
 </body>
 </html>
