--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -1,13 +1,14 @@
-*{
+* {
 	font-family: 'Inter', sans-serif;
-		font-size: 18px;
+	font-size: 18px;
 }
+
 #form-body {
 	background: linear-gradient(to right, #843B62, #0B032D, #201E1F)
 }
 
 #contenedor-form {
-	background: linear-gradient(#BDA0BC, #A2708A);
+	background: linear-gradient(#E8FFB7, #B7FFD8, #C4F5FC);
 	border-radius: 12px;
 	border: 3px solid black;
 }
@@ -17,9 +18,18 @@
 	margin: 10px;
 	background-color: #E3F2FD;
 	padding: 15px 30px;
-
 }
 
 #btn-submit:active {
 	background-color: #C20114;
+}
+
+#titulo-form {
+	background-color: #f3ec78;
+    background-image: linear-gradient(to left,#43BCCD, #662E9B);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;;
 }
