--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -12,15 +12,19 @@
 <link th:href="@{/css/estilos.css}" rel="stylesheet" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
+<link
+	href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap"
+	rel="stylesheet">
 
 </head>
+<div class="alert alert-success">
+	<span
+		th:text="'Tiempo de carga: ' + ${tiempoTranscurrido} + ' milisegundos'"></span>
+</div>
 <body id="form-body">
 
 	<div class="container my-5" id="contenedor-form">
-		<center id="titulo-form">
-			<h1 th:text="${titulo}"></h1>
-		</center>
+			<h1 id="titulo-form" th:text="${titulo}"></h1>
 		<form th:action="@{/app/subir}" th:object="${usuario}" method="POST">
 
 			<div class="form-group row my-3">
@@ -157,8 +161,7 @@
 			<div th:if="${#fields.hasErrors('fechaNacimiento')}"
 				th:errors="*{fechaNacimiento}" class="alert alert-danger"></div>
 
-			<button id="btn-submit"
-				type="submit">Subir datos</button>
+			<button id="btn-submit" type="submit">Subir datos</button>
 		</form>
 	</div>
 </body>
